# Blocky_DEV

./: CMakeLists.txt  README.md  fragment.glsl  fragment.shader  vertex.glsl  vertex.shader
include/game/: blocky.hpp  global.hpp
include/renderer/: chunk_mesh.hpp  font.hpp  hud.hpp  lighting.hpp  renderer.hpp  shader.hpp  texture.hpp
include/world/: block.hpp  chunk.hpp  player.hpp  ray.hpp  world.hpp
resources/shaders/: vertex.glsl
src/: main.cpp
src/game/: blocky.cpp
src/renderer/: chunk_mesh.cpp  hud.cpp  lighting.cpp  renderer.cpp  shader.cpp
src/world/: SimplexNoise.cpp  chunk.cpp  player.cpp  world.cpp
